[package]
name = "kaemoji_board"
version = "1.0.0"
authors = ["Name <lasagna@garfunkles.space>"]
edition = "2021"
description = "A simple egui emoji picker for emoticons!"
license = "GPL-3.0-or-later"

[dependencies]
cacao = "0.3.2"
dirs = "5.0.1"
eframe = "0.23.0"
egui = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
